[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "CustomBinaryTree"
version = "0.1.0"
description = "A small custom binary tree package"
readme = "readme.md"
requires-python = ">=3.7"
authors = [
  { name = "Jacob Aren" }
]

[tool.setuptools]
packages = ["CustomBinaryTree"]
